2007-11-27  Badlop  <badlop@process-one.net>

	* ChangeLog: Added ChangeLog, autogenerated using svn2cl.

2007-11-15 mremond

	* *.erl: Making sure SVN properties are correctly set.

2007-11-08 badlop

	* src/web/ejabberd_http_bind.erl: ejabberd_http_bind.erl: Don't
	  overwrite the stanza namespace (thanks to Anastasia Gornostaeva).

2007-11-02 mremond

	* src/web/ejabberd_http_bind.erl: * src/web/ejabberd_http_bind.erl:
	  Support for c2s ACL access, max_stanza and shaper on http_poll
	  connections (EJAB-243, EJAB-415, EJAB-416). Requires ejabberd
	  trunk r966.

2007-11-02 mremond

	* src/web/Makefile.in: * src/web/Makefile.in: Allow compilation
	  with debug information.

2007-10-20 badlop

	* src/web/ejabberd_http_bind.erl: The function
	  Erlang/OTP function httpd_util:to_lower/1 is deprecated,
	  and it's recommended to use string:to_lower/1 instead.

2007-09-25 sstrigler

	* src/web/ejabberd_http_bind.erl: init: use DEBUG instead of
	  INFO_MSG to keep log files small
	  fix parse errors for grepping 'stream:error'

2007-08-30 sstrigler

	* src/web/ejabberd_http_bind.erl: process_request: forgot keyword
	  'catch' when doing list_to_float on bosh version attribute for
	  initial request

2007-08-16 sstrigler

	* src/web/ejabberd_http_bind.erl: fixes for pausing sessions
	  (didn't parse 'pause' attribute to int)

2007-08-16 sstrigler

	* src/web/ejabberd_http_bind.erl: support pausing sessions

2007-08-16 sstrigler

	* ., src/web: set svn:ignore

2007-08-16 sstrigler

	* src/web/ejabberd_http_bind.erl: comment-header: talk about xmpp
	  over bosh rather than http binding

2007-08-16 sstrigler

	* src/web/ejabberd_http_bind.erl: process: removed debugging stuff
	  handl_sync_event({http_get...}): removed error condition

2007-08-15 sstrigler

	* src/web/ejabberd_http_bind.erl: code cleanup
	  code reorganization
	  store version of bosh session
	  use bosh version for error conditions

2007-08-15 sstrigler
