@@ -1,5 +1,9 @@
 2007-11-27  Badlop  <badlop@process-one.net>
 
+	* src/web/ejabberd_http_bind.erl (start): Migration code for
+	people using previous version of the HTTP binding
+	module (EJAB-390)
+
 	* ChangeLog: Added ChangeLog, autogenerated using svn2cl.
 
 2007-11-15 mremond
@@ -269,4 +273,3 @@
 
 	* http_bind, http_bind/branches, http_bind/tags, ., LICENSE.txt,
 	  README.txt, doc, ebin, src: Preparing http-bind addition
-
